--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"devDependencies": {
 		"@floating-ui/dom": "^1.3.0",
 		"@playwright/test": "^1.28.1",
+		"@rollup/plugin-json": "^6.0.0",
 		"@skeletonlabs/skeleton": "^1.7.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
@@ -39,6 +40,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@vercel/analytics": "^1.0.1"
+		"@vercel/analytics": "^1.0.1",
+		"svelte-i18n": "^3.6.0"
 	}
 }
