--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	"type": "module",
 	"dependencies": {
 		"@vercel/analytics": "^1.0.1",
-		"svelte-i18n": "^3.6.0"
+		"svelte-i18n": "^3.6.0",
+		"svelte-inview": "^4.0.0"
 	}
 }
