--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.3.0"
+		"vite": "^4.3.0",
+		"vite-plugin-tailwind-purgecss": "^0.0.3"
 	},
 	"type": "module",
 	"dependencies": {
