updated to latest, fixed search

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
-	"prettier.documentSelectors": ["**/*.svelte"],
+	"prettier.documentSelectors": [
+		"**/*.svelte"
+	],
 	"tailwindCSS.classAttributes": [
 		"class",
 		"accent",
 		"active",
+		"animIndeterminate",
+		"aspectRatio",
 		"background",
 		"badge",
 		"bgBackdrop",
@@ -41,19 +45,26 @@
 		"fillDark",
 		"fillLight",
 		"flex",
+		"flexDirection",
 		"gap",
 		"gridColumns",
 		"height",
 		"hover",
+		"inactive",
+		"indent",
 		"justify",
 		"meter",
 		"padding",
 		"position",
+		"regionAnchor",
 		"regionBackdrop",
 		"regionBody",
 		"regionCaption",
 		"regionCaret",
 		"regionCell",
+		"regionChildren",
+		"regionChipList",
+		"regionChipWrapper",
 		"regionCone",
 		"regionContent",
 		"regionControl",
@@ -65,17 +76,22 @@
 		"regionHead",
 		"regionHeadCell",
 		"regionHeader",
+		"regionIcon",
+		"regionInput",
 		"regionInterface",
 		"regionInterfaceText",
 		"regionLabel",
 		"regionLead",
 		"regionLegend",
 		"regionList",
+		"regionListItem",
 		"regionNavigation",
 		"regionPage",
 		"regionPanel",
 		"regionRowHeadline",
 		"regionRowMain",
+		"regionSummary",
+		"regionSymbol",
 		"regionTab",
 		"regionTrail",
 		"ring",
@@ -97,6 +113,7 @@
 		"spacing",
 		"text",
 		"track",
+		"transition",
 		"width",
 		"zIndex"
 	]
